# AUSPEX-MSGS

./: .gitignore  .gitmodules  README.md
src/auspex_msgs/: CMakeLists.txt  package.xml
src/auspex_msgs/action/: ExecutePlan.action  ExecuteSequence.action
src/auspex_msgs/msg/: Action.msg  ActionInstance.msg  ActionStatus.msg  ActionsVLN.msg  AltitudeLevel.msg  Area.msg  BatteryState.msg  ClientInfo.msg  Constraint.msg  DroneImage.msg  DroneState.msg  ExecuteAtom.msg  ExecutionInfo.msg  ExecutorCommand.msg  ExecutorState.msg  FluentChange.msg  FrameData.msg  Goal.msg  GoalCondition.msg  KnowledgeChange.msg  MissionDescription.msg  ObjectKnowledge.msg  ObjectObservation.msg  Plan.msg  PlanStatus.msg  PlannerCommand.msg  PlatformCapabilities.msg  PlatformClass.msg  PlatformCommand.msg  PlatformState.msg  SearchMission.msg  SensorCapabilities.msg  SensorMode.msg  Task.msg  TaskEvent.msg  UserCommand.msg  Waypoints.msg
src/auspex_msgs/srv/: AddAction.srv  AddActionString.srv  CameraControllerStartCapture.srv  CameraControllerStopCapture.srv  CameraGimbalCenter.srv  CameraGimbalSetAngle.srv  CameraGimbalStartSweep.srv  CameraGimbalStopSweep.srv  CancelGoal.srv  DeleteInstance.srv  DeleteInstances.srv  DeleteKnowledge.srv  DeleteSlot.srv  DeleteSubframe.srv  ExistsKnowledge.srv  FindInstanceIds.srv  FindInstances.srv  GetAllInstances.srv  GetAltitude.srv  GetHighestPoint.srv  GetInstance.srv  GetInstances.srv  GetLocationsROI.srv  GetOrigin.srv  QueryKnowledge.srv  ReadBinaryFluent.srv  ReadNullaryFluent.srv  ReadSlot.srv  ReadUnaryFluent.srv  RegisterBinaryFluent.srv  RegisterNullaryFluent.srv  RegisterUnaryFluent.srv  SetSlot.srv  UnregisterBinaryFluent.srv  UpdateKnowledge.srv  UpsertSubframe.srv  WriteKnowledge.srv
src/auspex_utils/: package.xml  setup.cfg  setup.py
src/auspex_utils/auspex_utils/: __init__.py  action_conversion.py
src/msg_context/: package.xml  setup.cfg  setup.py
src/msg_context/msg_context/: loader.py
src/msg_context_cpp/: CMakeLists.txt  package.xml
src/msg_context_cpp/include/msg_context_cpp/: message_loader.hpp
