<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>msg_context</name>
  <version>1.0.0</version>
  <description>Loader for importing messages depending on project context</description>
  <maintainer email="kai.sommer@unibw.de">Kai Sommer</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>auspex_msgs</depend>
  <build_depend>hat_menthon</build_depend>
  <exec_depend>hat_menthon</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
